test.58: adopt the agreed hybrid - subagent base (state/address/protocol) with the original slider feel restored plus both shared fixes
Base: gpt-5.5 subagent 07d6fd0 approach (per P-0116 decision), ported into the root project.
- ReturnDispatchState: per-cell dispatch evidence keyed by player/network/address/filter/maximum, reset on observed context change, cleared on logout/stop; panel protocol registrar 4
- Address editing/click handling kept from the subagent base (queued click after submit, draft restore on rejection, paired passthrough release)
- PanelLayout slider mapping restored to the original feel: round-to-nearest inverse with the last painted pixel reading as the maximum (fixes the floor() lag/jump regression AND the old full-capacity 16->15 read-back); endpoints clamped to the artwork
- Shared fix: pressing a slider endpoint and releasing without moving no longer rewrites the value (drag origin + move threshold; release position also counts as movement)
- Shared fix: address submit no longer drops a slider change - tryStartSliderDrag on a submitted address and a queued threshold flushed when the command settles

Verified: JUnit 25/25; core GameTest 116/116; paper+mobile+JEI (NF249) 130/130; full client review PASSED incl FMP_SLIDER_PRESS_IN_PLACE_PASSED and FMP_ADDRESS_THEN_DRAG_PASSED; packaged core/full server Done->stop->save->exit 0. Machine toolchain path removed from gradle.properties (moved to the local user config).